--- a/index.html
+++ b/index.html
@@ -5,40 +5,89 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Timetable Generator</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-      background-color: #f2f2f2;
-    }
-    h1 {
-      text-align: center;
-    }
-    form {
-      max-width: 400px;
-      margin: 0 auto 20px auto;
-      background: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-    label {
-      display: block;
-      margin: 10px 0 5px;
-    }
-    input {
-      width: 100%;
-      padding: 8px;
+    * {
+      margin: 0;
+      padding: 0;
       box-sizing: border-box;
     }
-    button {
-      margin-top: 15px;
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f0f4f8;
+      line-height: 1.6;
+    }
+    header {
+      background-color: #4CAF50;
+      padding: 15px;
+      text-align: center;
+      color: white;
+      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    }
+    nav {
+      background-color: #333;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      display: flex;
+      justify-content: center;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    }
+    nav a {
+      padding: 15px 30px;
+      color: white;
+      text-decoration: none;
+      text-align: center;
+      transition: background-color 0.3s ease;
+      font-size: 16px;
+    }
+    nav a:hover {
+      background-color: #575757;
+    }
+    .container {
+      width: 80%;
+      margin: 20px auto;
+      padding: 20px;
+      background-color: white;
+      border-radius: 8px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+    form {
+      max-width: 500px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+    form label {
+      display: block;
+      font-size: 14px;
+      margin-bottom: 8px;
+    }
+    form input {
       width: 100%;
-      padding: 10px;
+      padding: 12px;
+      font-size: 16px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      margin-bottom: 15px;
+    }
+    form input:focus {
+      border-color: #4CAF50;
+      outline: none;
+    }
+    button {
+      width: 100%;
+      padding: 15px;
       background-color: #4CAF50;
       color: white;
       border: none;
       border-radius: 4px;
+      font-size: 16px;
       cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    button:hover {
+      background-color: #45a049;
     }
     table {
       width: 100%;
@@ -46,48 +95,93 @@
       margin-top: 20px;
     }
     th, td {
-      border: 1px solid #ccc;
-      padding: 10px;
+      padding: 12px;
+      border: 1px solid #ddd;
       text-align: left;
     }
     th {
       background-color: #4CAF50;
       color: white;
     }
-    .day {
-      background-color: #ddd;
-      font-weight: bold;
-      text-align: center;
+    td {
+      background-color: #f9f9f9;
+    }
+    .container button {
+      margin-top: 20px;
+      width: auto;
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <h1>Timetable Generator</h1>
-  <form id="timetableForm">
-    <label for="sections">Total Sections</label>
-    <input type="number" id="sections" value="15" />
 
-    <label for="sip">SIP Sections</label>
-    <input type="number" id="sip" value="8" />
+  <header>
+    <h1>Timetable Generator</h1>
+  </header>
+  
+  <nav>
+    <a href="#" onclick="showPage('login')">Login & Generate</a>
+    <a href="#" onclick="showPage('timetable')">View Timetable</a>
+  </nav>
 
-    <label for="eep">EEP Sections</label>
-    <input type="number" id="eep" value="7" />
+  <div class="container">
+    <!-- Login Form -->
+    <div id="login">
+      <form id="timetableForm">
+        <label for="email">Email</label>
+        <input type="email" id="email" required />
 
-    <label for="faculty">Total Faculty</label>
-    <input type="number" id="faculty" value="30" />
+        <label for="password">Password</label>
+        <input type="password" id="password" required />
 
-    <button type="submit">Generate Timetable</button>
-  </form>
+        <label for="sections">Total Sections</label>
+        <input type="number" id="sections" value="15" required />
 
-  <div id="output"></div>
+        <label for="sip">SIP Sections</label>
+        <input type="number" id="sip" value="8" required />
 
+        <label for="eep">EEP Sections</label>
+        <input type="number" id="eep" value="7" required />
+
+        <label for="faculty">Total Faculty</label>
+        <input type="number" id="faculty" value="30" required />
+
+        <button type="submit">Generate Timetable</button>
+      </form>
+    </div>
+
+    <!-- Timetable Output -->
+    <div id="timetable" style="display: none">
+      <button onclick="downloadPDF()">Download PDF</button>
+      <button onclick="downloadExcel()">Export to Excel</button>
+      <div id="output"></div>
+    </div>
+  </div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script>
-       const days = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
+    const days = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
     const sipTimeSlots = ["10:10 - 12:10 PM", "1:00 - 3:00 PM"];
     const eepTimeSlots = ["9:10 - 12:10 PM", "12:10 - 4:00 PM (Lunch Break: 1:10 - 2:00 PM)"];
 
+    function showPage(id) {
+      document.getElementById("login").style.display = id === 'login' ? 'block' : 'none';
+      document.getElementById("timetable").style.display = id === 'timetable' ? 'block' : 'none';
+    }
+
     document.getElementById("timetableForm").addEventListener("submit", function (e) {
       e.preventDefault();
+
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      if (email !== "admin@example.com" || password !== "123456") {
+        alert("Unauthorized! Incorrect credentials.");
+        return;
+      }
 
       const totalSections = parseInt(document.getElementById("sections").value);
       const sipCount = parseInt(document.getElementById("sip").value);
@@ -104,35 +198,50 @@
 
       let assignedFaculties = [];
 
-      function assignSectionRandomly(section, subject, timeSlots) {
-        let shuffledDays = [...days].sort(() => Math.random() - 0.5);
-        for (let day of shuffledDays) {
-          const faculty = getAvailableFaculty(assignedFaculties, facultyMembers);
-          if (!faculty) return;
-
-          let time = timeSlots[Math.floor(Math.random() * timeSlots.length)];
-          timetable[day].push({ section, time, subject, faculty });
-          assignedFaculties.push(faculty);
-          return; // section assigned, exit
-        }
+      function getAvailableFaculty(assigned, all) {
+        const available = all.filter(f => !assigned.includes(f));
+        if (available.length === 0) return null;
+        return available[Math.floor(Math.random() * available.length)];
       }
 
-      sipSections.forEach(section => {
-        assignSectionRandomly(section, "SIP", sipTimeSlots);
-      });
+      function assignSessionToDay(section, subject, day, timeSlots) {
+        const faculty = getAvailableFaculty(assignedFaculties, facultyMembers);
+        if (!faculty) return false;
+        const time = timeSlots[Math.floor(Math.random() * timeSlots.length)];
+        timetable[day].push({ section, time, subject, faculty });
+        assignedFaculties.push(faculty);
+        return true;
+      }
 
-      eepSections.forEach(section => {
-        assignSectionRandomly(section, "EEP", eepTimeSlots);
-      });
+      const combinedSections = [...sipSections.map(s => ({ section: s, subject: "SIP" })), ...eepSections.map(e => ({ section: e, subject: "EEP" }))];
+      let shuffledCombined = [...combinedSections].sort(() => Math.random() - 0.5);
+      for (let i = 0; i < days.length; i++) {
+        const day = days[i];
+        const { section, subject } = shuffledCombined[i % shuffledCombined.length];
+        const timeSlots = subject === "SIP" ? sipTimeSlots : eepTimeSlots;
+        assignSessionToDay(section, subject, day, timeSlots);
+      }
+
+      function assignRandomSessions(sectionList, subject, timeSlots) {
+        sectionList.forEach(section => {
+          const alreadyAssigned = Object.values(timetable).some(dayArr =>
+            dayArr.some(entry => entry.section === section && entry.subject === subject)
+          );
+          if (alreadyAssigned) return;
+
+          let shuffledDays = [...days].sort(() => Math.random() - 0.5);
+          for (let day of shuffledDays) {
+            if (assignSessionToDay(section, subject, day, timeSlots)) break;
+          }
+        });
+      }
+
+      assignRandomSessions(sipSections, "SIP", sipTimeSlots);
+      assignRandomSessions(eepSections, "EEP", eepTimeSlots);
 
       renderTimetable(timetable);
+      showPage("timetable");
     });
-
-    function getAvailableFaculty(assigned, all) {
-      const available = all.filter(f => !assigned.includes(f));
-      if (available.length === 0) return null;
-      return available[Math.floor(Math.random() * available.length)];
-    }
 
     function renderTimetable(timetable) {
       let html = "";
@@ -147,6 +256,32 @@
       document.getElementById("output").innerHTML = html;
     }
 
+    function downloadPDF() {
+      const { jsPDF } = window.jspdf;
+      const doc = new jsPDF();
+      doc.text("Timetable", 10, 10);
+      let y = 20;
+      for (const day of days) {
+        doc.text(`${day}:`, 10, y);
+        timetable[day].forEach(session => {
+          doc.text(`Section: ${session.section}, Time: ${session.time}, Subject: ${session.subject}, Faculty: ${session.faculty}`, 10, y += 10);
+        });
+        y += 20;
+      }
+      doc.save("timetable.pdf");
+    }
+
+    function downloadExcel() {
+      const ws = XLSX.utils.aoa_to_sheet([["Section", "Time", "Subject", "Faculty"]]);
+      days.forEach(day => {
+        timetable[day].forEach(session => {
+          XLSX.utils.sheet_add_aoa(ws, [[session.section, session.time, session.subject, session.faculty]], { origin: -1 });
+        });
+      });
+      const wb = XLSX.utils.book_new();
+      XLSX.utils.book_append_sheet(wb, ws, "Timetable");
+      XLSX.writeFile(wb, "timetable.xlsx");
+    }
   </script>
 </body>
 </html>
