--- a/index.html
+++ b/index.html
@@ -3,132 +3,54 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Timetable Generator</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: 'Arial', sans-serif;
-      background-color: #f0f4f8;
-      line-height: 1.6;
-    }
-    header {
-      background-color: #4CAF50;
-      padding: 15px;
-      text-align: center;
-      color: white;
-      box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    }
-    nav {
-      background-color: #333;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      display: flex;
-      justify-content: center;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    }
-    nav a {
-      padding: 15px 30px;
-      color: white;
-      text-decoration: none;
-      text-align: center;
-      transition: background-color 0.3s ease;
-      font-size: 16px;
-    }
-    nav a:hover {
-      background-color: #575757;
-    }
-    .container {
-      width: 80%;
-      margin: 20px auto;
-      padding: 20px;
-      background-color: white;
-      border-radius: 8px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    }
-    form {
-      max-width: 500px;
-      margin: 0 auto;
-      padding: 20px;
-      background-color: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    }
-    form label {
-      display: block;
-      font-size: 14px;
-      margin-bottom: 8px;
-    }
-    form input {
-      width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      margin-bottom: 15px;
-    }
-    form input:focus {
-      border-color: #4CAF50;
-      outline: none;
-    }
-    button {
-      width: 100%;
-      padding: 15px;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 4px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-    }
-    button:hover {
-      background-color: #45a049;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-    }
-    th, td {
-      padding: 12px;
-      border: 1px solid #ddd;
-      text-align: left;
-    }
-    th {
-      background-color: #4CAF50;
-      color: white;
-    }
-    td {
-      background-color: #f9f9f9;
-    }
-    .container button {
-      margin-top: 20px;
-      width: auto;
-      padding: 10px 20px;
-      font-size: 16px;
-      cursor: pointer;
-    }
-  </style>
+  <title>Schedule Planner</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
   <header>
-    <h1>Timetable Generator</h1>
+    <h1>Schedule Planner</h1>
   </header>
   
   <nav>
+    <a href="#" onclick="showPage('home')">Home</a>
     <a href="#" onclick="showPage('login')">Login & Generate</a>
-    <a href="#" onclick="showPage('timetable')">View Timetable</a>
+    <a href="#" onclick="showPage('timetable')">View Schedule</a>
+    <a href="#" onclick="showPage('contact')">Contact Us</a>
   </nav>
 
   <div class="container">
+    <!-- Home Page -->
+    <div id="home">
+      <h2>Welcome to Schedule Planner</h2>
+      <p>
+        Schedule Planner is a tool designed to help you generate and manage schedules efficiently. 
+        Whether you're planning for classes, labs, or faculty assignments, our tool provides a simple 
+        and effective way to organize your time.
+      </p>
+      <p>
+        Use the navigation bar above to log in, generate schedules, view them, or contact us for more information.
+      </p>
+
+      <!-- Highlight Cards -->
+      <div class="home-highlight">
+        <div class="card">
+          <h4>Generate Schedules</h4>
+          <p>Create optimized schedules for your classes, labs, or faculty assignments with ease.</p>
+        </div>
+        <div class="card">
+          <h4>View Timetables</h4>
+          <p>Access and review your generated schedules in a clean and organized format.</p>
+        </div>
+        <div class="card">
+          <h4>Contact Support</h4>
+          <p>Need help? Reach out to our support team for assistance with your scheduling needs.</p>
+        </div>
+      </div>
+    </div>
+
     <!-- Login Form -->
-    <div id="login">
+    <div id="login" style="display: none;">
       <form id="timetableForm">
         <label for="email">Email</label>
         <input type="email" id="email" required />
@@ -148,28 +70,43 @@
         <label for="faculty">Total Faculty</label>
         <input type="number" id="faculty" value="30" required />
 
-        <button type="submit">Generate Timetable</button>
+        <button type="submit">Generate Schedule</button>
       </form>
     </div>
 
-    <!-- Timetable Output -->
-    <div id="timetable" style="display: none">
+    <!-- Schedule Output -->
+    <div id="timetable" style="display: none;">
       <button onclick="downloadPDF()">Download PDF</button>
       <button onclick="downloadExcel()">Export to Excel</button>
-      <div id="output"></div>
+      <div id="output" class="timetable-output"></div>
+    </div>
+
+    <!-- Contact Us Page -->
+    <div id="contact" style="display: none;">
+      <h2>Contact Us</h2>
+      <p>If you have any questions or need assistance, feel free to reach out to us:</p>
+      <ul>
+        <li><span>Email:</span> support@scheduleplanner.com</li>
+        <li><span>Phone:</span> +1 234 567 890</li>
+        <li><span>Address:</span> 123 Schedule Planner Lane, Productivity City, PC 12345</li>
+      </ul>
+      <p>We are here to help you make the most of your time!</p>
     </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
   <script>
     const days = ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"];
     const sipTimeSlots = ["10:10 - 12:10 PM", "1:00 - 3:00 PM"];
     const eepTimeSlots = ["9:10 - 12:10 PM", "12:10 - 4:00 PM (Lunch Break: 1:10 - 2:00 PM)"];
 
     function showPage(id) {
-      document.getElementById("login").style.display = id === 'login' ? 'block' : 'none';
-      document.getElementById("timetable").style.display = id === 'timetable' ? 'block' : 'none';
+      const pages = ["home", "login", "timetable", "contact"];
+      pages.forEach(page => {
+        document.getElementById(page).style.display = page === id ? "block" : "none";
+      });
     }
 
     document.getElementById("timetableForm").addEventListener("submit", function (e) {
@@ -257,27 +194,33 @@
     }
 
     function downloadPDF() {
-      const { jsPDF } = window.jspdf;
-      const doc = new jsPDF();
-      doc.text("Timetable", 10, 10);
-      let y = 20;
-      for (const day of days) {
-        doc.text(`${day}:`, 10, y);
-        timetable[day].forEach(session => {
-          doc.text(`Section: ${session.section}, Time: ${session.time}, Subject: ${session.subject}, Faculty: ${session.faculty}`, 10, y += 10);
-        });
-        y += 20;
-      }
-      doc.save("timetable.pdf");
+      const timetableElement = document.querySelector(".timetable-output");
+      html2canvas(timetableElement).then(canvas => {
+        const imgData = canvas.toDataURL("image/png");
+        const { jsPDF } = window.jspdf;
+        const pdf = new jsPDF("p", "mm", "a4");
+        const imgProps = pdf.getImageProperties(imgData);
+        const pdfWidth = pdf.internal.pageSize.getWidth();
+        const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
+        pdf.addImage(imgData, "PNG", 0, 0, pdfWidth, pdfHeight);
+        pdf.save("timetable.pdf");
+      });
     }
 
     function downloadExcel() {
-      const ws = XLSX.utils.aoa_to_sheet([["Section", "Time", "Subject", "Faculty"]]);
-      days.forEach(day => {
-        timetable[day].forEach(session => {
-          XLSX.utils.sheet_add_aoa(ws, [[session.section, session.time, session.subject, session.faculty]], { origin: -1 });
+      const timetableElement = document.querySelector(".timetable-output");
+      const rows = [];
+      timetableElement.querySelectorAll("table").forEach((table, index) => {
+        rows.push([`Day: ${days[index]}`]); // Add day as a header
+        rows.push(["Section", "Time", "Subject", "Faculty"]); // Add table headers
+        table.querySelectorAll("tr").forEach(row => {
+          const cells = Array.from(row.querySelectorAll("td")).map(cell => cell.textContent);
+          if (cells.length > 0) rows.push(cells); // Add row data
         });
+        rows.push([]); // Add an empty row between days
       });
+
+      const ws = XLSX.utils.aoa_to_sheet(rows);
       const wb = XLSX.utils.book_new();
       XLSX.utils.book_append_sheet(wb, ws, "Timetable");
       XLSX.writeFile(wb, "timetable.xlsx");
