--- a/index.html
+++ b/index.html
@@ -237,5 +237,16 @@
       XLSX.writeFile(wb, "timetable.xlsx");
     }
   </script>
+  <script>
+    document.querySelector('.home-highlight').addEventListener('mousemove', e => {
+      const cards = document.querySelectorAll('.card');
+      cards.forEach(card => {
+        const x = (e.clientX / window.innerWidth - 0.5) * 10;
+        const y = (e.clientY / window.innerHeight - 0.5) * 10;
+        card.style.transform = `rotateY(${x}deg) rotateX(${y}deg)`;
+      });
+    });
+  </script>
 </body>
 </html>
+``` 
