--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
         Whether you're planning for classes, labs, or faculty assignments, our tool provides a simple 
         and effective way to organize your time.
       </p>
-      <p>
-        Use the navigation bar above to log in, generate schedules, view them, or contact us for more information.
-      </p>
+   
 
       <!-- Highlight Cards -->
       <div class="home-highlight">
@@ -319,7 +317,8 @@
       };
     }
 
-    function exportToExcel() {
+    function exportToExcel() 
+    {
       if (!generatedTimetableBlob) {
         alert("No timetable generated to export.");
         return;
